plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'org.jreleaser' version '1.17.0'
}

group = 'io.github.larsarv.jrmg'
version = '1.0.2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

publishing {
    repositories {
        maven {
            name = "PreDeploy"
            url = uri(layout.buildDirectory.dir("pre-deploy"))
        }
    }
    publications {
        myPub(MavenPublication) {
            from components.java
            pom {
                name = 'Java Record Mutator Generator: Annotation Processor'
                description = 'Annotation processor package for the Java Record Mutator Generator'
                url = 'https://github.com/larsarv/java-record-mutator-generator'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = 'larsarv'
                        name = 'Lars Arvidson'
                        email = 'lars.arvidson@gmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/larsarv/java-record-mutator-generator.git'
                    developerConnection = 'scm:git:ssh://github.com:larsarv/java-record-mutator-generator.git'
                    url = 'https://github.com/larsarv/java-record-mutator-generator'
                }
            }
        }
    }
}
/*
signing {
    sign publishing.publications.myPub
}
*/
jreleaser {
    project {
        copyright = '2025 Lars Arvidson'
        description = 'Annotation processor package for the Java Record Mutator Generator'
    }
    signing {
        active = 'ALWAYS'
        armored = true
        mode = 'FILE'
        publicKey = '../public.key'
        secretKey = '../private.key'
    }
    deploy {
        maven {
            mavenCentral {
                sonatype {
                    active = 'ALWAYS'
                    url = 'https://central.sonatype.com/api/v1/publisher'
                    username = findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME")
                    password = findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD")
                    stagingRepository('build/pre-deploy')
                }
                app {
                    retryDelay = 20
                    maxRetries = 100
                }
            }
        }
    }
    release {
        github {0
            enabled = false
        }
    }
}

dependencies {
    implementation project(":api")
    annotationProcessor "com.google.auto.service:auto-service:1.1.1"
    implementation "com.google.auto.service:auto-service:1.1.1"
    implementation "com.palantir.javapoet:javapoet:0.7.0"

    testImplementation(platform("org.junit:junit-bom:6.0.1"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

java {
    withJavadocJar()
    withSourcesJar()
}

test {
    useJUnitPlatform()
}
